# rustbee

./: .gitignore  .ignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  Session.vim  TODO.md  run.sh  rustbee  shared.rs
.github/: dependabot.yml
.github/workflows/: build_and_release.yml  clippy_lint.yml
ffi-examples/deno/: ffi.ts  main.ts
ffi-examples/go/: main.go
ffi-examples/zig/: build.zig
ffi-examples/zig/src/: main.zig
rustbee-common/: Cargo.toml  librustbee.h
rustbee-common/src/: bluetooth.rs  colors.rs  constants.rs  daemon.rs  device.rs  ffi.rs  lib.rs  logger.rs  storage.rs  tests.rs
rustbee-common/src/linux/: bluetooth.rs  device.rs  mod.rs
rustbee-common/src/utils/: mod.rs
rustbee-common/src/windows/: bluetooth.rs  daemon.rs  device.rs  mod.rs
rustbee-daemon/: Cargo.toml  Justfile
rustbee-daemon/src/: main.rs
rustbee-gui/: .prettierignore  .prettierrc  Cargo.toml  Justfile  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
rustbee-gui/src/: app.html  main.rs
rustbee-gui/src-tauri/: Cargo.toml  tauri.conf.json
rustbee-gui/src-tauri/src/: commands.rs  main.rs  state.rs
rustbee-gui/src/components/: device.svelte  header.svelte  subheader.svelte
rustbee-gui/src/lib/: gradients.ts  types.ts  utils.ts
rustbee-gui/src/lib/stores/: caller.ts
rustbee-gui/src/routes/: +layout.svelte  +page.svelte
rustbee-gui/src/styles/: tailwind.css
src/: address.rs  cli.rs  constants.rs  hueblue.rs  lib.rs  main.rs  mask.rs
