[package]
name = "rustbee"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color_space = "0.5.3"
tokio = { version = "1.47.0", features = ["fs", "rt", "macros", "signal", "rt-multi-thread", "time"] }
rustbee-common = { path = "rustbee-common" }
btleplug = "0.11.7"
futures = "0.3.31"
