[package]
name = "rustbee-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
ffi = []

[dependencies]
btleplug = "0.11.5"
color_space = "0.5.4"
eframe = { version = "0.29.1", features = ["persistence"] }
futures = "0.3.30"
interprocess = { version = "2.2.0", features = ["tokio"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.39.2", features = ["fs", "process"] }
uuid = "1.10.0"
