[package]
name = "rustbee-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
ffi = []

[dependencies]
bluest = "0.6.7"
btleplug = "0.11.6"
chrono = "0.4.38"
color_space = "0.5.4"
eframe = { version = "0.29.1", features = ["persistence"] }
futures = "0.3.30"
interprocess = { version = "2.2.2", features = ["tokio"] }
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["fs", "macros", "process", "signal"] }
uuid = "1.11.0"
windows = { version = "0.58.0", features = ["Devices_Bluetooth", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
