[package]
name = "rustbee-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
ffi = []

[dependencies]
bluest = "0.6.7"
btleplug = "0.11.7"
chrono = "0.4.39"
color_space = "0.5.4"
eframe = { version = "0.29.1", features = ["persistence"] }
futures = "0.3.30"
interprocess = { version = "2.2.2", features = ["tokio"] }
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "signal"] }
uuid = "1.12.0"
windows = { version = "0.59.0", features = ["Devices_Bluetooth", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
