[package]
name = "rustbee-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
interprocess = { version = "2.2.0", features = ["tokio"] }
tokio = { version = "1.39.2", features = ["fs", "rt", "macros", "signal", "rt-multi-thread", "time"] }
rustbee-common = { path = "../rustbee-common" }
