[package]
name = "rustbee-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
futures = "0.3.30"
rustbee-common = { path = "../rustbee-common" }
serde = "1.0.207"
serde_json = "1.0.125"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
