[package]
name = "rustbee-gui"
version = "0.1.0"
description = "The GUI app to use Rustbee"
authors = ["Snoupix"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustbee-common = { path = "../../rustbee-common" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
